--- a/styles.css
+++ b/styles.css
@@ -93,3 +93,42 @@ h1 {
 #hero-text {
     margin-bottom: 10px;
 }
+
+.section2 {
+    text-align: center;
+}
+
+.info-header{
+    font-size: 36px;
+    font-weight: 900;
+    margin: 30px 0;
+}
+
+.info-container {
+    display: flex;
+    justify-content: center;
+    gap: 36px;
+    margin-bottom: 100px;
+}
+
+.info {
+    max-width: 175px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.info-box {
+    border-color: #3882f6;
+    border-radius: 8px;
+    border-style: solid;
+    border-width: 4px;
+    width: 150px;
+    height: 150px;
+    margin-bottom: 10px;
+}
+
+.info-text {
+    color: #6d747d;
+}
